// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router error 1`] = `""*" must be the last segment"`;

exports[`Router match all 1`] = `
{
  "matched": [Function],
  "param": Map {
    "*" => "",
  },
}
`;

exports[`Router match all 2`] = `
{
  "matched": [Function],
  "param": Map {
    "*" => "a",
  },
}
`;

exports[`Router match all 3`] = `
{
  "matched": [Function],
  "param": Map {
    "*" => "a/b",
  },
}
`;

exports[`Router match all 4`] = `
{
  "matched": [Function],
  "param": Map {
    "*" => "c",
  },
}
`;

exports[`Router params 1`] = `null`;

exports[`Router params 2`] = `
{
  "matched": [Function],
  "param": Map {
    "p" => "a",
  },
}
`;

exports[`Router params 3`] = `
{
  "matched": [Function],
  "param": Map {
    "p2" => "b",
  },
}
`;

exports[`Router params 4`] = `null`;

exports[`Router params 5`] = `
{
  "matched": [Function],
  "param": Map {
    "p1" => "x",
  },
}
`;

exports[`Router params 6`] = `
{
  "matched": [Function],
  "param": Map {
    "p2" => "y",
  },
}
`;

exports[`Router params 7`] = `
{
  "matched": [Function],
  "param": Map {
    "p2" => "y",
    "p1" => "x",
  },
}
`;
